--- a/notebooks/Tract-segm_EDA-baseline-Flash-DeepLab-v3.ipynb
+++ b/notebooks/Tract-segm_EDA-baseline-Flash-DeepLab-v3.ipynb
@@ -1230,7 +1230,9 @@
     "    df_test = pd.read_csv(os.path.join(DATASET_FOLDER, \"train.csv\"))\n",
     "    df_test = df_test[df_test[\"id\"].str.startswith(\"case123_day\")]\n",
     "    sfolder = \"train\"\n",
-    "    display(df_test.head())"
+    "    display(df_test.head())\n",
+    "\n",
+    "os.makedirs(os.path.join(DATASET_IMAGES, sfolder), exist_ok=True)"
    ]
   },
   {
