update API in notebook

--- a/notebooks/Tract-segm_EDA-baseline-Flash-DeepLab-v3.ipynb
+++ b/notebooks/Tract-segm_EDA-baseline-Flash-DeepLab-v3.ipynb
@@ -330,7 +330,7 @@
    ],
    "source": [
     "from pprint import pprint\n",
-    "from kaggle_imsegm.data import extract_tract_details\n",
+    "from kaggle_imsegm.data_io import extract_tract_details\n",
     "\n",
     "pprint(extract_tract_details(df_train['id'].iloc[0], DATASET_FOLDER))\n",
     "\n",
@@ -371,7 +371,7 @@
    ],
    "source": [
     "from ipywidgets import interact, IntSlider\n",
-    "from kaggle_imsegm.data import load_volume_from_images, create_tract_segm\n",
+    "from kaggle_imsegm.data_io import load_volume_from_images, create_tract_segmentation\n",
     "from kaggle_imsegm.visual import show_tract_volume\n",
     "\n",
     "CASE = 108\n",
@@ -381,7 +381,7 @@
     "print(vol.shape)\n",
     "\n",
     "df_ = df_train[(df_train[\"Case\"] == CASE) & (df_train[\"Day\"] == DAY)]\n",
-    "segm = create_tract_segm(df_vol=df_, vol_shape=vol.shape)\n",
+    "segm = create_tract_segmentation(df_vol=df_, vol_shape=vol.shape)\n",
     "\n",
     "def interactive_show(volume):\n",
     "    vol_shape = volume.shape\n",
@@ -481,7 +481,7 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "from joblib import Parallel, delayed\n",
-    "from kaggle_imsegm.data import preprocess_tract_scan\n",
+    "from kaggle_imsegm.data_io import preprocess_tract_scan\n",
     "\n",
     "LABELS = sorted(df_train[\"class\"].unique())\n",
     "print(LABELS)\n",
@@ -599,7 +599,7 @@
     "import albumentations as alb\n",
     "from flash.core.data.io.input_transform import InputTransform\n",
     "from flash.image.segmentation.input_transform import prepare_target, remove_extra_dimensions\n",
-    "from kaggle_imsegm.augment import FlashAlbumentationsAdapter\n",
+    "from kaggle_imsegm.transform import FlashAlbumentationsAdapter\n",
     "\n",
     "@dataclass\n",
     "class SemanticSegmentationInputTransform(InputTransform):\n",
