--- a/notebooks/Tract-segm_EDA-baseline-Flash-DeepLab-v3.ipynb
+++ b/notebooks/Tract-segm_EDA-baseline-Flash-DeepLab-v3.ipynb
@@ -20,8 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Skipping torchtext as it is not installed.\u001b[0m\u001b[33m\n",
-      "\u001b[0mefficientnet-pytorch          0.6.3\n",
+      "\u001B[33mWARNING: Skipping torchtext as it is not installed.\u001B[0m\u001B[33m\n",
+      "\u001B[0mefficientnet-pytorch          0.6.3\n",
       "kaggle                        1.5.12\n",
       "kaggle-imsegm                 0.1.0.dev0\n",
       "kaggle-instsegm               0.1.0.dev0\n",
@@ -485,7 +485,6 @@
     "# import shutil\n",
     "import numpy as np\n",
     "from joblib import Parallel, delayed\n",
-    "from PIL import Image\n",
     "\n",
     "from kaggle_imsegm.data_io import preprocess_tract_scan\n",
     "\n",
@@ -580,8 +579,6 @@
    "outputs": [],
    "source": [
     "import flash\n",
-    "import torch\n",
-    "from flash.core.data.utils import download_data\n",
     "from flash.image import SemanticSegmentation, SemanticSegmentationData"
    ]
   },
@@ -601,7 +598,7 @@
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
-    "from typing import Any, Callable, Dict, Mapping, Sequence, Tuple, Union\n",
+    "from typing import Callable, Tuple\n",
     "\n",
     "import albumentations as alb\n",
     "from flash.core.data.io.input_transform import InputTransform\n",
