--- a/notebooks/Tract-segm_statistic-predictions.ipynb
+++ b/notebooks/Tract-segm_statistic-predictions.ipynb
@@ -928,8 +928,7 @@
     "            continue\n",
     "        rle[val] = rle.get(val, []) + [str(start), length]\n",
     "    # post-processing\n",
-    "    rle = {lb: \" \".join(map(str, id_lens)) for lb, id_lens in rle.items()}\n",
-    "    return rle"
+    "    return {lb: \" \".join(map(str, id_lens)) for lb, id_lens in rle.items()}"
    ]
   },
   {
@@ -959,9 +958,9 @@
     "def _interpolate_day(segm_lb, day):\n",
     "    if day in segm_lb:\n",
     "        return segm_lb[day]\n",
-    "    days_last = [d for d in segm_lb.keys() if d < day]\n",
+    "    days_last = [d for d in segm_lb if d < day]\n",
     "    day_last = max(days_last)\n",
-    "    days_next = [d for d in segm_lb.keys() if d > day]\n",
+    "    days_next = [d for d in segm_lb if d > day]\n",
     "    if not days_next:\n",
     "        return segm_lb[day_last]\n",
     "    day_next = min(days_next)\n",
